<resources>
    <string name="app_name">SUSTcast</string>
    <string name="tvSignUp">Sign Up</string>
    <string name="tvSignUpText">It\'s easier to sign up now</string>
    <string name="tvSignUpProceedText">Create your SUSTCast Account</string>
    <string name="tvAccountAlreadyText">Already have an account?</string>
    <string name="tvLoginText">Login</string>
    <string name="ivLogoDescription">The Logo in front.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_login">Welcome Back,</string>
    <string name="log_in">Log In!</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="lowerPassword">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="welcome_signup">Welcome,</string>
    <string name="sign_up_signup">Sign Up!</string>
    <string name="user_name">USER NAME</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="department">DEPARTMENT</string>
    <string name="i_accept_the_policy_and_terms">I accept the <u><a href="tocscheme://toc">policy and terms</a></u></string>
    <string name="about_the_contributors">About the Contributors</string>
    <string name="bbc_news">http://bbcwssc.ic.llnwd.net/stream/bbcwssc_mp1_ws-einws</string>
    <string name="ice_stream">http://103.84.159.230:8000/sustcast.ogg</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_paused">Stream Paused</string>
    <string name="go_back"> Go back </string>
    <string name="reset_your">Reset Your</string>
    <string name="forgetPasstext">Please enter your mail, press the reset button and check your mail to follow further instructions.</string>
    <string name="reset_password">Reset Password</string>
    <string name="news_button">Read me the news</string>
    <string name="channel_name">some_channel</string>
    <string name="playback_channel_name">playback_channel_name</string>
    <string name="plaza">some_string</string>
    <string name="metadata_loading">Loading....</string>
    <string name="server_off">Broadcasting Paused</string>
    <string name="server_full">ALL SERVERS ARE CURRENTLY FULL!!</string>
    <string name="bbc_down">BBC is taking a break :( Check back after a while or try our other features!!</string>
    <string name="link_empty">Server link is empty</string>
    <string name="feedback">Feedback</string>
    <string name="facebook_page">Facebook Page</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="log_out">Log Out</string>
    <string name="dept_of_ncse_sust">Dept. of \nCSE, SUST</string>
    <string name="news_nreader">News\nReader!</string>
    <string name="currently_reading">Currently Reading :</string>
    <string name="bbc_news_tv">BBC News</string>
    <string name="currently_playing">Currently Playing :</string>
    <string name="no_music_playing">No Music Playing</string>
    <string name="payload_log_format">%1$s --> %2$s</string>
    <string name="mail_address">sustcast@gmail.com</string>
</resources>
