<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="forgetPassActivity"
            type="com.sust.sustcast.authentication.ForgetPasswordActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_login_rectangle"
        tools:context=".authentication.ForgetPasswordActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingRight="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvResetYour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kollektif_bold"
                android:text="@string/reset_your"
                android:textColor="@color/grey700"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kollektif_bold"
                android:paddingTop="30dp"
                android:paddingBottom="10dp"
                android:text="@string/lowerPassword"
                android:textColor="@color/grey800"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:src="@drawable/line_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvForgetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kollektif"
                android:gravity="center_horizontal"
                android:text="@string/forgetPasstext"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@id/ivLine"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivLine"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:src="@drawable/line_login"
                app:layout_constraintBottom_toTopOf="@id/outlinedEmailField"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgetPass" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedEmailField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                app:boxStrokeColor="@color/grey300"
                app:layout_constraintBottom_toTopOf="@id/btReset"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLine">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailForget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kollektif"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_rounded"
                android:fontFamily="@font/kollektif_bold"
                android:onClick="@{()-> forgetPassActivity.resetPassword(etEmailForget.getText().toString())}"
                android:paddingHorizontal="30dp"
                android:stateListAnimator="@null"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textColor="@color/grey700"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/outlinedEmailField" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>